* Version 4.3

Unreleased.  Current line of development.

** Improvements

- All deprecated options and features of version 4.2 have been
  removed.


* Version 4.2  "Compressor Road"

Released on March 29, 2016.

** Improvements

- All deprecated options and features of version 4.1 have been
  removed.

- Enblend and Enfuse support layer (aka "page", aka "frame") selection
  in of multi-layer image-files.  This includes processing any layers
  in user-defined order.

- Both Enblend and Enfuse can now perform all their pyramidal blending
  operations in CIELAB (aka L*a*b*, aka L-star) and CIELUV (aka
  L*u*v*) color spaces, too.  See section "New Commandline Options",
  option `--blend-colorspace'.

  The previous default, CIECAM for input images with ICC-profile has
  been changed to CIELUV.  The default for RGB images without
  ICC-profile remains.  However, the new default for floating-point
  image data is to use the RGB-cube, no matter whether the images come
  with profiles or not.

- The new Graph-Cut algorithm is the default primary seam-line
  generator.

- Avoid a division-by-zero in the Annealing Optimizer.

- Fix a bug (#1356551) in the seam-line vectorization code that was
  there since 2004.  The fix changes the position of almost any
  coarse-mask seam line vertex by one pixel.

- Fix a longstanding quirk, which allowed to load masks into Enblend
  and Enfuse that were unsuitable for processing.

- Fix a bug in the highlight-recovery that caused Enfuse to bail out
  with the uncaught exception
      "Minimizer1D::set_bracket: minimum not bracketed".

- The OpenMP enabled versions of Enblend and Enfuse benefit from
  Google's TCMalloc library.

- Several exposure weight functions were added to Enfuse.  The choice
  is now up to the user.  The default still is the Gauss function as
  in all Enfuse versions before.

- Enblend and Enfuse now both can make use of the tremendous computing
  power in modern graphics cards.  To that end the binaries must be