@@ -144,14 +144,7 @@ typedef enum
 #define TRANSFORMATION_FLAGS_FOR_BLENDING cmsFLAGS_NOCACHE
 
 
-// Select our preferred type of image depending on what ./configure
-// tells us.
-#ifdef CACHE_IMAGES
-#error "The ImageCache feature has been withdrawn.  Reconfigure without ImageCache and re-build."
-#define IMAGETYPE vigra_ext::CachedFileImage
-#else
 #define IMAGETYPE vigra::BasicImage
-#endif
 
 
 #ifdef WIN32
